# GrokPtah

./: .gitignore  Cargo.toml  README.md
.github/workflows/: desktop.yml
crates/codegen/grokptah-agent-bridge/: Cargo.toml
crates/codegen/grokptah-agent-bridge/examples/: live_eval.rs
crates/codegen/grokptah-agent-bridge/src/: agents_personas.rs  auth_store.rs  discover.rs  eval_oracle.rs  events.rs  exec_risk.rs  gateway_config.rs  hooks.rs  host.rs  host_helpers.rs  instance_lock.rs  isolation.rs  lib.rs  local_tools.rs  mcp_runtime.rs  memory.rs  models_catalog.rs  permission.rs  project_context.rs  prompt_combine.rs  search_engine.rs  session.rs  session_store.rs  ssrf.rs  textutil.rs  todo_list.rs  types.rs  worktree_gc.rs
crates/codegen/grokptah-agent-bridge/tests/: agent_tools.rs  bridge_lifecycle.rs  isolation_capability.rs  parity_eval.rs  subagent_parallel.rs
crates/codegen/xai-grok-models/: default_models.json
desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: henry.w@example.net  icon.icns
desktop/src-tauri/src/: commands.rs  event_forward.rs  lib.rs  main.rs  pty_host.rs
desktop/src/components/: ActivityIndicator.tsx  BrandMark.tsx  ContextMenu.tsx  DebugTrace.tsx  ErrorBoundary.tsx  FleetStrip.test.ts  FleetStrip.tsx  LaunchSplash.tsx  MarkdownBody.test.ts  MarkdownBody.tsx  PermissionModal.test.tsx  PermissionModal.tsx  SearchPanel.tsx  SessionBrowser.tsx  SessionPane.tools.test.ts  SessionPane.tsx  SettingsPanel.gateway.test.ts  SettingsPanel.tsx  Splash.tsx  StreamingMarkdown.tsx  StreamingText.tsx  StyledSelect.test.ts  StyledSelect.tsx  TerminalPane.tsx  ToolCallCard.tsx  memoIsolation.test.ts  roleAffordance.test.ts
desktop/src/lib/: activity.ts  api.ts  appearance.ts  debugTrace.test.ts  debugTrace.ts  denyHistory.test.ts  denyHistory.ts  layout.ts  (+20 more)
docs/: ADR-001-agent-runtime.md  ARCHITECTURE.md  BACKLOG_AUDIT.md  DEV_SETUP.md  PARITY_EVALS.md  PARITY_SCOREBOARD.md  TOOL_MATRIX.md
evals/: tasks.json
evals/scripts/: run_parity.sh
(+105 files in other folders)
