[workspace]
members = ["."]
resolver = "2"

[package]
name = "grokptah-desktop"
version = "0.1.0"
description = "GrokPtah desktop (Tauri 2)"
authors = ["GrokPtah"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grokptah-agent-bridge = { path = "../../crates/codegen/grokptah-agent-bridge" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
parking_lot = "0.12"
portable-pty = "0.8"
base64 = "0.22"

[lib]
name = "grokptah_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
